# MindLens

./: .gitignore  main.py  pyproject.toml
configs/: labels.json
data/articleLevel/processed/: distilbert_results.json
data/processed/: confusion_matrix.json  train.jsonl
data/raw/: train.jsonl
notebooks/: 01_inspect_dataset.py  02_clean_dataset.py  03_baseline_tfidf.py  04_distilbert_baseline.py  05_dataset_valid.py  06_Train_distilbert.ipynb
scripts/: Span2Bio.py  build_dataset.py  build_semeval_jsonl.py  class_weight.py  preprocessing.py  tokenizer_test.py
